--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,35 @@ color_scheme: dracula
 search_enabled: true
 heading_anchors: true
 aux_links:
-  "View on GitHub":
+  "GitHub Repository":
     - "https://github.com/vexedmouse09/UDMCyberSecurity-Labs-MacBookCompatibility"
 
-# Back to top link
-back_to_top: true
-back_to_top_text: "Back to top"
+
+collections:
+  docs:
+    permalink: "/:collection/:path/"
+    output: true
+
+just_the_docs:
+  collections:
+    docs:
+      name: Documentation
 
 # Footer content
 footer_content: "Copyright &copy; 2025. Distributed under the MIT license."
+
+# Callouts
+callouts:
+  warning:
+    title: Warning
+    color: red
+  note:
+    title: Note
+    color: blue
+  tip:
+    title: Tip
+    color: green
+
+# Build settings
+markdown: kramdown
+highlighter: rouge
