--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ baseurl: "/UDMCyberSecurity-Labs-MacBookCompatibility"
 
 # Build settings
 markdown: kramdown
+
+# Theme settings
 remote_theme: just-the-docs/just-the-docs@v0.4.2
 color_scheme: dark
 
@@ -15,16 +17,6 @@ heading_anchors: true
 aux_links:
   "GitHub Repository":
     - "https://github.com/vexedmouse09/UDMCyberSecurity-Labs-MacBookCompatibility"
-
-# Enable collapsible navigation
-collapse_navigation: true
-
-# Enable mermaid diagrams
-mermaid:
-  # Version of mermaid library
-  version: "9.1.6"
-  # Set to true to initialize mermaid
-  initialize: true
 
 # Footer content
 footer_content: "Copyright &copy; 2025. Distributed under the MIT license."
